# pypm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy_errors.txt  pyproject.toml  ruff_errors.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  index.md  usage.md
src/pypm/: cli.py  db.py  heuristics.py  installer.py  parser.py  pypi.py  resolver.py  scanner.py  utils.py
tests/: test_resolver.py  test_scanner.py
