[project]
name = "pypm-cli"
version = "0.0.5"
description = "Automatic, AST-based dependency inference from Python imports. Stop writing dependencies twice."
readme = "README.md"
requires-python = ">=3.5"
license = { text = "MIT" }

authors = [
    { name = "D. Suriya Kumar", email = "suriyakumardurai.sk.in@gmail.com" }
]

keywords = [
    "python",
    "dependency",
    "cli",
    "package-manager",
    "pyproject"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed"
]


dependencies = [
    "requests>=2.31",
    "rich>=13.0.0; python_version>='3.8'",
    "importlib_metadata>=1.0; python_version<'3.8'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests",
    "types-setuptools"
]


[project.scripts]
pypm = "pypm.cli:main"

[project.urls]
Homepage = "https://github.com/Suriyakumardurai/pypm"
Repository = "https://github.com/Suriyakumardurai/pypm"
Issues = "https://github.com/Suriyakumardurai/pypm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pypm"]

[tool.mypy]
python_version = "3.9"

[tool.ruff]
target-version = "py38"
