[project]
name = "pypm-cli"
version = "0.0.6"
description = "A zero-config CLI tool that automatically infers dependencies from your Python source code."
readme = "README.md"
authors = [{ name = "D. Suriya Kumar", email = "suriyakumardurai.sk.in@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.5"
keywords = ["pip", "dependencies", "pyproject.toml", "inference", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "importlib-metadata; python_version < '3.8'",
    "rich; python_version >= '3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-requests",
    "vermin",
]

[project.urls]
Homepage = "https://github.com/Suriyakumardurai/pypm"
Repository = "https://github.com/Suriyakumardurai/pypm"

[project.scripts]
pypm = "pypm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
# pypm supports Python 3.5+, but ruff's minimum target is py37.
target-version = "py37"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "importlib.metadata"
ignore_missing_imports = true